# telegram-shell-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  bot.py  pyproject.toml  settings.py.sample  setup.cfg  telegram-shell-bot.yml
